--- a/TimeSheetApp/packages.config
+++ b/TimeSheetApp/packages.config
@@ -4,6 +4,8 @@
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.1" targetFramework="net461" />
@@ -22,6 +24,7 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.1" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
