--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=false;user id = TimeSheetuser; password = DK_user!; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="TimeSheetAtHome" connectionString="data source=IlyaHome;Initial Catalog=TimeSheet;Integrated Security=true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
