--- a/TimeSheetApp/packages.config
+++ b/TimeSheetApp/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net461" />
+  <package id="DryIoc" version="4.4.1" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
-  <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
-  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
